correctly handle overflow button

--- a/viewer/style/buttons.less
+++ b/viewer/style/buttons.less
@@ -404,6 +404,9 @@ button{
   &.Dim{
     .iconButton('brightness_low.svg');
   }
+  &.Overflow{
+    .iconButton('more_left.svg');
+  }
 }
 
 .dialogButton{
